# liblinear

./: .gitignore  CMakeLists.txt
.av/config/: prompt
src/: predict.cpp  train.cpp
src/bindings/java/: liblinear.i  pom.xml
src/bindings/python/: README.md  setup.py
src/bindings/python/liblinear/: __init__.py
src/examples/: heart_scale.model
src/examples/python/: README  heartscale.py
src/liblinear/: io.cpp  io.h  linear.cpp  linear.h
